# whatsabi-py

./: .gitignore  README.md  cli.py  pyproject.toml
tests/: conftest.py  test_loader.py  test_selector.py  test_whatsabi_py.py
whatsabi/: disasm.py  utils.py
whatsabi_py/: abi.py  loaders.py  selectors.py
