[tool.poetry]
name = "whatsabi"
version = "0.1.0"
description = ""
authors = ["bitrocks <0xbitrocks@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
web3 = "^5.31.3"
click = "^8.1.3"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[tool.poetry.dev-dependencies]
#pytest = "^5.2"

[tool.poetry.scripts]
hello = "cli:hello"
guess_abi = "cli:guess_abi"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
